DirectSound: fix double free on error (close #5966)

Regression from 6d90bf20c01db2b284a81b26ce3356536257c1fc